test/corpus/comparison.txt
===
All comparisons
===

a > 2
a >= 2
a < 2
a <= 2
a == 2
a != 2
a in [2, 3]
a not in [2, 3]

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (int))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (list
                          list_entry: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (indexed_expr
                                            root: (primary_expr
                                              (literal
                                                (int))))))))))))
                          list_entry: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (indexed_expr
                                            root: (primary_expr
                                              (literal
                                                (int))))))))))))))))))))))))
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            left: (compare_expr
              delegate: (add_expr
                delegate: (mult_expr
                  delegate: (unary_expr
                    delegate: (var_path)))))
            op: (not_in)
            right: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (literal
                        (list
                          list_entry: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (indexed_expr
                                            root: (primary_expr
                                              (literal
                                                (int))))))))))))
                          list_entry: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (indexed_expr
                                            root: (primary_expr
                                              (literal
                                                (int)))))))))))))))))))))))))
