test/corpus/compound_assign.txt
===
All
===

a += 2
a -= 2
a *= 2
a /= 2
a %= 2

---

(source_file
  (compound_assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (int)))))

===
Var path
===

a[1][2] += 2
a.b.c += 2
a.b["asd"].c += 2

---

(source_file
  (compound_assign
    left: (var_path
      root: (identifier)
      indexing: (primary_expr
        (literal
          (int)))
      indexing: (primary_expr
        (literal
          (int))))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier)
      indexing: (identifier)
      indexing: (identifier))
    right: (primary_expr
      (literal
        (int))))
  (compound_assign
    left: (var_path
      root: (identifier)
      indexing: (identifier)
      indexing: (primary_expr
        (literal
          (string
            start: (string_start)
            contents: (string_content)
            end: (string_end))))
      indexing: (identifier))
    right: (primary_expr
      (literal
        (int)))))
