test/corpus/start.txt
===
Complete
===

#!/usr/bin/env rad
---
this is a file
header

whoa! hello
---
args:
    name string
    age int = 30 # An age.

    name enum ["alice", "bob"]
    name regex "[A-Z][a-z]*"

---

(source_file
  (shebang)
  (file_header
    contents: (file_header_contents))
  (arg_block
    declaration: (arg_declaration
      arg_name: (identifier)
      type: (string_type))
    declaration: (arg_declaration
      arg_name: (identifier)
      type: (int_type)
      default: (int)
      comment: (comment_text))
    enum_constraint: (arg_enum_constraint
      arg_name: (identifier)
      values: (string_list
        string: (string
          start: (string_start)
          contents: (string_contents
            content: (string_content))
          end: (string_end))
        string: (string
          start: (string_start)
          contents: (string_contents
            content: (string_content))
          end: (string_end))))
    regex_constraint: (arg_regex_constraint
      arg_name: (identifier)
      regex: (string
        start: (string_start)
        contents: (string_contents
          content: (string_content))
        end: (string_end)))))
