test/corpus/str_multiline.txt
===
Simple multiline
===

a = """
"Hello" they said
this is a many-line
 string
"""

---

(source_file
  (assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (string
          start: (string_start)
          contents: (string_contents
            content: (string_content)
            content: (string_content)
            content: (string_content)
            content: (string_content)
            content: (string_content))
          end: (string_end))))))

===
Empty multiline
===

a = """
"""

---

(source_file
  (assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (string
          start: (string_start)
          end: (string_end))))))

===
With indentation
===

a = """
 hello
  friend
 """

---

(source_file
  (assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (string
          start: (string_start)
          contents: (string_contents
            content: (string_content)
            content: (string_content)
            content: (string_content))
          end: (string_end))))))

===
With interpolation
===

a = """
"Hello" they said
this is a {2 + 2}
 string
"""

---

(source_file
  (assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (string
          start: (string_start)
          contents: (string_contents
            content: (string_content)
            content: (string_content)
            content: (string_content))
          contents: (interpolation
            expr: (primary_expr
              (binary_op
                left: (primary_expr
                  (literal
                    (int)))
                right: (primary_expr
                  (literal
                    (int))))))
          contents: (string_contents
            content: (string_content)
            content: (string_content))
          end: (string_end))))))

===
Raw
===

a = r"""
"Hello" they said
this is a {2 + 2}
 string
"""

---

(source_file
  (assign
    left: (var_path
      root: (identifier))
    right: (primary_expr
      (literal
        (string
          start: (string_start)
          contents: (string_contents
            content: (string_content)
            content: (string_content)
            content: (string_content)
            content: (string_content)
            content: (string_content))
          end: (string_end))))))
